--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ verify_ssl = true
 requests = "*"
 flask = "*"
 supermarktconnector = "*"
-uwsgi = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
