--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -2,11 +2,8 @@ FROM python:3.8
 
 WORKDIR /app
 
-COPY ./Pipfile /app/Pipfile
-COPY ./Pipfile.lock /app/Pipfile.lock
+COPY ./requirements.txt /app/requirements.txt
 
-RUN pip install pipenv
-RUN pipenv lock --requirements > requirements.txt
 RUN pip install -r requirements.txt
 
 COPY . /app
